# PDF-Outliner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pdf_oxide_research.md  pdf_viewer_spec.md
.github/workflows/: release.yml
assets/icon/: icon.icns
crates/bookmark/: Cargo.toml
crates/bookmark/src/: lib.rs  model.rs  tree.rs
crates/import_export/: Cargo.toml
crates/import_export/src/: csv_io.rs  lib.rs  xlsx_io.rs
crates/import_export/tests/: tree_roundtrip.rs
crates/pdf_engine/: Cargo.toml
crates/pdf_engine/examples/: dump_chars.rs  dump_outline.rs  render_crop.rs  smoke_test.rs  verify_render.rs
crates/pdf_engine/src/: lib.rs  links.rs  outline.rs  search.rs  selection.rs  skew.rs
crates/pdf_outline_writer/: Cargo.toml
crates/pdf_outline_writer/src/: lib.rs
crates/pdf_outline_writer/tests/: write_and_verify.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/examples/: verify_fonts.rs
crates/ui/src/: app.rs  autosave.rs  batch_import.rs  fonts.rs  macos_open_file.rs  main.rs  sidebar.rs  toolbar.rs  viewer_panel.rs
crates/ui/tests/: document_switch_crash_repro.rs
scripts/: package-macos.sh  package-windows.ps1
