[package]
name = "import_export"
version.workspace = true
edition.workspace = true

[dependencies]
bookmark = { path = "../bookmark" }
csv = "1"
encoding_rs = "0.8"
chardetng = "0.1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "=3.14.0"
