[package]
name = "pdf_engine"
version.workspace = true
edition.workspace = true

[dependencies]
pdfium-render = { version = "0.9", features = ["thread_safe"] }
bookmark = { path = "../bookmark" }
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# render_crop 진단 예제에서 크롭 결과를 PNG로 저장하기 위함.
# pdfium-render가 image_025 feature로 image 크레이트를 끌어오지만 png 인코더 feature는
# 켜져 있지 않아, 여기서 명시적으로 켜서 (Cargo 기능 통합으로) 같이 적용되게 한다.
image = { version = "0.25", default-features = false, features = ["png"] }
