[package]
name = "ui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pdf_viewer"
path = "src/main.rs"

[dependencies]
pdf_engine = { path = "../pdf_engine" }
bookmark = { path = "../bookmark" }
import_export = { path = "../import_export" }
pdf_outline_writer = { path = "../pdf_outline_writer" }
pdfium-render = { version = "0.9", features = ["thread_safe"] }
eframe = { version = "0.29", features = ["wgpu", "persistence"] }
egui = "0.29"
arboard = "3"
uuid.workspace = true
anyhow.workspace = true
rfd = "0.15"
env_logger = "0.11"

[dev-dependencies]
tempfile = "=3.14.0"
